--- a/test/fixtures/jobs.yml
+++ b/test/fixtures/jobs.yml
@@ -2,14 +2,14 @@
 
 one:
   provider: 1
-  startdate: 2013-05-26
-  enddate: 2013-05-26
+  startdate: <%= 1.days.from_now %>
+  enddate: <%= 1.days.from_now %>
   specialization: MyString
   comment: MyText
 
 two:
   provider: 1
-  startdate: 2013-05-26
-  enddate: 2013-05-26
+  startdate: <%= 1.days.from_now %>
+  enddate: <%= 2.days.from_now %>
   specialization: MyString
   comment: MyText
