--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  email: MyString
+  email: emailone@example.com
   password_digest: MyString
 
 two:
-  email: MyString
+  email: emailtwo@example.com
   password_digest: MyString
