create user tests

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,8 +2,10 @@
 
 one:
   email: emailone@example.com
-  password_digest: MyString
+  password_digest: <%= BCrypt::Password.create('secret') %>
+
 
 two:
   email: emailtwo@example.com
-  password_digest: MyString
+  password_digest: <%= BCrypt::Password.create('secret') %>
+
